docs: swagger api updated
